--- a/crates/page/src/product/style.css
+++ b/crates/page/src/product/style.css
@@ -1,8 +1,12 @@
 .product-card {
+    box-sizing: border-box;
     background: rgba(0, 0, 0, 0.8);
     border: 1px solid #333;
     padding: 4rem 3rem;
     display: flex;
+    flex: 1;
+    height: 400px;
+    overflow: hidden;
     flex-direction: column;
     align-items: flex-start;
     border-radius: 0;
